# AI-agent-aws

./: .env.example  .gitignore  ARCHITECTURE.md  AWS_SETUP_STEPS.md  BUILD_SUMMARY.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  FILE_STRUCTURE.md  HACKATHON.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  TESTING.md  VIDEO_SCRIPT.md  agent-out.json  agents.json  aliases.json  amplify.yml  app.py  architecture-diagram.md  architecture-simple.md  architecture_diagram  create_architecture_diagram.py  data_ingestion_lambda.py  deploy.sh  docker-compose.yml  everything.md  generate_architecture_png.py  generate_diagram.py  get-agent.json  hackathon-strategy.md  ocean_forecast_agent.py  out.json  payload.json  prepare.json  pyproject.toml  requirements.txt  (+4 more)
.aws-sam/: build.toml
deployment/: __init__.py  cloudformation_template.py  sam_template.yaml
docs/: AGENT_SETUP.md  AMPLIFY.md  DEMO.md  DEPLOYMENT.md  VIDEO_SCRIPT.md  agent_instructions_min.txt
infra/: template-agentcore.yaml
lambdas/agent_gateway/: handler.py  requirements.txt
lambdas/ingest/: handler.py  requirements.txt
schemas/action-groups/: fetch_ocean_data.json  fetch_ocean_data_openapi.json
scripts/: add_lambda_permission.py  bedrock_agent_setup.py  configure_action_group.py  configure_action_group_openapi.py  prepare_and_route.py
src/: config.py  lambda_handler.py  main.py
src/agents/: __init__.py  alert_generation_agent.py  data_ingestion_agent.py  (+2 more)
streamlit_app/: app.py  requirements.txt
tests/: test_integration.py
web/: index.html  sample_response.json  script.js  styles.css
(+4 files in other folders)
